Mon Nov  9 16:53:10 GMT 2009  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20090915.

Mon Nov  9 16:27:44 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (find_charset_locale): New function.
	* src/encodings.h (find_charset_locale): Add prototype.
	* src/man.c (make_roff_command): When invoking col, ensure that
	  LC_CTYPE is set to an appropriate locale for the selected
	  character set (Debian bug #555331).
	* NEWS: Document this.

Thu Oct  8 23:22:57 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c: Include <unistd.h> for dup and STDIN_FILENO.

Thu Oct  1 01:08:40 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (parse_opt), src/lexgrog_test.c (parse_opt),
	  src/whatis.c (parse_opt): Turn off ARGP_HELP_PRE_DOC to avoid
	  problems with translations of documentation strings beginning with
	  a vertical tab separator (i.e. no pre-option documentation).

Thu Sep 24 12:32:48 BST 2009  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_pump): When a source pipeline dies, make
	  sure to drain its output before discarding its output file
	  descriptor (Debian bug #548153). We still record the death to
	  avoid duplicate debugging messages.
	* NEWS: Document this.

Tue Sep 22 00:53:42 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_default_device): If the locale encoding is
	  ASCII, then use the ascii device even if preconv is available; it
	  will do a better job than producing UTF-8 output and then recoding
	  that to ASCII (Debian bug #547695).

Sat Sep 19 15:02:20 BST 2009  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Fri Sep 11 01:19:41 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/id.po: Fix syntax error.

Wed Sep  9 14:42:18 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (General options): Refer to the "Warnings" node