@@ -15,6 +15,8 @@ Major changes since man-db 2.5.6:
 	  selected character set when invoking col. This fixes 'LANG=C man
 	  -E UTF-8', as used by lintian.
 
+	o Don't run tests if cross-compiling.
+
 man-db 2.5.6 (26 August 2009)
 =============================
 
