@@ -1,3 +1,11 @@
+Mon Nov  9 16:59:47 GMT 2009  Colin Watson  <cjwatson@debian.org>
+
+	* configure.ac: Define a CROSS_COMPILING conditional if
+	  cross-compiling.
+	* man/Rules.man, src/tests/Makefile.am: Don't run tests if
+	  cross-compiling.
+	* NEWS: Document this.
+
 Mon Nov  9 16:53:10 GMT 2009  Colin Watson  <cjwatson@debian.org>
 
 	Upgrade to Gnulib 20090915.
